tests/fixtures/syntax/valid/before_each_minimal.repor
before_each {
  write <"seed.txt"> "seed\n"
}

case "reads the seeded file" {
  assert {
    file <"seed.txt"> exists
  }
}
